--- a/pharmaapplication/src/main/AndroidManifest.xml
+++ b/pharmaapplication/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pharma.doctorapp">
+    package="com.pharma.pharmaapplication">
 
     <application
         android:allowBackup="true"
@@ -10,8 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DoctorApp">
         <activity
-            android:name=".MainActivity2"
-            android:exported="true" >
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
