--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "DoctorApp"
 include ':app'
+include ':pharmaapplication'
+include ':userapp'
