--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,34 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DoctorApp">
         <activity
-            android:name=".MainActivity2"
-            android:exported="true" >
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ShippingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UploadActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DashBoardActivity"
+            android:exported="false"
+            android:label="@string/title_activity_dash_board"
+            android:theme="@style/Theme.DoctorApp.NoActionBar" />
+        <activity
+            android:name=".SignUpActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity2"
+            android:exported="true" />
     </application>
 
 </manifest>
