--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.medical.doctorapp" >
+    package="com.medical.doctorapp">
 
     <application
         android:allowBackup="true"
@@ -12,10 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DoctorApp"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".FoodDetails"
+            android:exported="false" />
+        <activity
+            android:name=".ProductSuccess"
+            android:exported="false" />
+        <activity
+            android:name=".Category2Activity"
+            android:exported="false" />
         <activity
             android:name=".Splash"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,8 +54,7 @@
         <activity
             android:name=".MealPlans"
             android:exported="true"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SelectedHomeKit"
             android:exported="false"
@@ -66,8 +74,7 @@
         <activity
             android:name=".BookAppointment"
             android:exported="true"
-            android:screenOrientation="portrait" >
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".PaymentDetails"
             android:exported="false"
@@ -111,9 +118,7 @@
         <activity
             android:name=".GetStart"
             android:exported="true"
-            android:screenOrientation="portrait" >
-        </activity>
-
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
